--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap');
 
-body{
-    font-weight: 400;
-    background: #F5F5F5;
-    font-family: "Josefin Sans",serif;
+body {
+	font-weight: 400;
+	background: #f5f5f5;
+	font-family: 'Josefin Sans', serif;
 }
